--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
-    "pinia": "^2.2.3",
+    "pinia": "^2.2.4",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
   },
